# fjaraskupan

./: README.rst  pyproject.toml  setup.py
.github/workflows/: python-package.yml
src/fjaraskupan/: __init__.py  __main__.py
tests/: test_init.py
