[project]
name = "fjaraskupan"
version = "2.3.3"
description = "A python library for speaking to fjäråskupan"
readme = "README.rst"
authors = [
    {name = "Joakim Plate"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.19",
    "bleak-retry-connector>=4.4.3",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/elupus/fjaraskupan"

[project.optional-dependencies]
tests = [
    "pytest-cov",
    "pytest-mock",
    "pytest>3.6.4",
]

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"
